# nlp_similarity

./: .gitignore  NLPApi_Call.docx  README.md  index.md  requirements.txt  setup.cfg  setup.py  version.sh  ~$PApi_Call.docx
analytics/: filter_questions_db.py  filter_user_response.py  generate_report.py  insight.py  recommendation_engine.py
nlpanalytics/analytics/: filter_questions_db.py  filter_user_response.py  generate_report.py  insight.py
nlpanalytics/utils/: accuracy_question_wise.py  calculate_accuracy.py  cluster_question.py  db_read.py  load_test_api.py  test_similarity.py
nlpsim/: __init__.py  _version.py  get_updated_version.py
nlpsim/nlpsim_api/: __init__.py  rest_api.py
nlpsim/nlpsim_main/: __init__.py  output_class.py  params.py  process_args.py  similarity.py
nlpsim/nlpsim_methods/: methods.py  rhyming.py
nlpsim/nlpsim_utils/: __init__.py  get_updated_version.py  helper.py  logging.py  nlp_logging.py  utilities.py  word_to_num.py
src/: __init__.py  helper.py  methods.py  params.py  requirements.txt  rest_api.py  rhyming.py  similarity.py  utilities.py
src/nlpsim/: __init__.py  _version.py  get_updated_version.py
src/nlpsim/nlpsim_api/: __init__.py  rest_api.py
src/nlpsim/nlpsim_main/: __init__.py  input_class.py  params.py  process_args.py  similarity.py
src/nlpsim/nlpsim_utils/: helper.py  (+4 more)
test/: run_similarity_api.py  test_data.csv  test_similarity.py  test_similarity_api.py  test_similarity_methods.py
utils/: accuracy_question_wise.py  calculate_accuracy.py  cluster_question.py  db_read.py  load_test_api.py  test_similarity.py
(+3 files in other folders)
