[metadata]

name = nlpsim
version = 2.0
author = HiVOCO
author_email = n/a
description = NLP Based Similarity
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yash26061981/nlp_similarity
project_urls =
    Bug Tracker = https://github.com/yash26061981/nlp_similarity/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6